# Zoo

./: .coverage  .env  .gitignore  AGENTS.md  AGENTS.org.md  CLAUDE.md  README.md  package-lock.json  pyproject.toml  requirements.txt
.githooks/: post-commit  pre-commit
backend/: __init__.py
docs/: agent-index.md  git-hooks.md  repo-overview.md
frontend/: index.html  package-lock.json  package.json  vite.config.ts
progress/: 2026-04-08-cubos-package-migration.md  2026-04-09-cubos-new-labware.md  2026-04-15-fix-homing.md  2026-04-16-remote-asmi-zoo-debugging.md  2026-04-28-agent-index.md  2026-05-05-cubos-staging-coordinate-sync.md  2026-05-06-digital-sim-integration.md  2026-05-13-gantry-calibration-ui.md  2026-05-19-calibration-alarm-recovery.md  2026-05-20-gantry-safety-hardening.md  2026-05-20-ui-ux-cleanup.md  2026-05-20-windows-installer.md  2026-05-20.md  2026-06-11-windows-installer-python-runtime.md  2026-06-12-protocol-stop-button.md  2026-06-16-rpi-camera-calibration.md  2026-07-06-run-bundle.md  2026-07-07-ui-redesign-design-system.md  2026-07-08-generic-installer-seeds.md  2026-07-08-mission-control-dark-design.md  2026-07-08-theme-toggle.md  README.md  fix-deck-import-panda-deck.md
tests/: api_client.py  conftest.py  test_app.py  test_app_lifespan.py  test_architecture_boundaries.py  test_board_router.py  test_bundle_runs.py  test_data_router.py  test_deck_router.py  test_gantry_models.py  test_gantry_router.py  test_macos_installer.py  test_main_entrypoint.py  test_protocol_router.py  test_raw_router.py  test_runs_router.py  test_security.py  test_settings_router.py  test_simulation_router.py  test_system_router.py  test_windows_installer.py  (+2 more)
(+182 files in other folders)
